--- a/part4/blog-list/package.json
+++ b/part4/blog-list/package.json
@@ -16,5 +16,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.12.1"
+  },
+  "devDependencies": {
+    "supertest": "^7.1.0"
   }
 }
