--- a/part4/blog-list/package.json
+++ b/part4/blog-list/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "NODE_ENV=production node index.js",
     "dev": "NODE_ENV=development node --watch index.js",
+    "lint": "eslint .",
     "test": "NODE_ENV=test node --test"
   },
   "keywords": [],
@@ -20,6 +21,10 @@
     "mongoose": "^8.12.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.23.0",
+    "@stylistic/eslint-plugin-js": "^4.2.0",
+    "eslint": "^9.23.0",
+    "globals": "^16.0.0",
     "supertest": "^7.1.0"
   }
 }
