--- a/part4/blog-list/package.json
+++ b/part4/blog-list/package.json
@@ -6,7 +6,8 @@
     "start": "NODE_ENV=production node index.js",
     "dev": "NODE_ENV=development node --watch index.js",
     "lint": "eslint .",
-    "test": "NODE_ENV=test node --test"
+    "test": "NODE_ENV=test node --test",
+    "start:test": "NODE_ENV=test node index.js"
   },
   "keywords": [],
   "author": "",
