--- a/part7/bloglist-extended/frontend/package.json
+++ b/part7/bloglist-extended/frontend/package.json
@@ -17,7 +17,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.6.0"
+    "react-router-dom": "^7.6.0",
+    "styled-components": "^6.1.18"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
